2008-08-25  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Sync person chats after re-enabling
	  them in OnConnected, else they don't get new messages. (closes trac bug
	  #99)

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Using LibraryCatalog now.

2008-08-24  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Kill threads we started when
	  disconnecting.

2008-08-21  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Dispose all chats after quitting in
	  CommandQuit().

2008-08-05  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Colorize nicks in nick changes and
	  quit messages.

2008-08-04  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: _OnNickChange(): Nick changes now use
	  colored nicks.

2008-07-31  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed /help command to spit out the
	  header in the session instead of the frontend manager directly.

2008-07-29  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed resetting colors in messages
	  where clear control character is used. (thanks to Zhila for spotting
	  this)

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Don't pass ReceiveType.List to
	  protocol chat.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Engine-IRC.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Added listing ban list support to